--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <nav></nav>
+    <nav>Final Navigation</nav>
     <section></section>
     <footer></footer>
 </body>
