--- a/Footer.html
+++ b/Footer.html
@@ -57,12 +57,13 @@
 
         <style>
           .fa {
-            padding: 20px;
-            font-size: 30px;
-            width: 50px;
+            padding: 10px;
+            font-size: 20px;
+            width: 40px;
             text-align: center;
             text-decoration: none;
-            margin: 5px 2px;
+            border-radius: 25px;
+            margin: 3px 2px;
           }
           
           .fa:hover {
